# Sequenzo

./: .gitattributes  .gitignore  .gitmodules  ARCHITECTURE_GUIDE.md  LICENSE  MANIFEST.in  OPENMP_ENHANCEMENT.md  OPENMP_FIX_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  TESTING_IMPROVEMENTS.md  __init__.py  comparison_contemporary_vs_lag_effects.csv  debug_cluster_quality.py  debug_cpp_direct.py  diagnose.py  export_distance_matrix.py  pyproject.toml  requirements-3.10.txt  requirements-3.11.txt  requirements-3.12.txt  requirements-3.9.txt  setup.py  test_mvad_cluster_quality.py  test_openmp.py  verify_installation.py
.github/workflows/: python-app.yml  (+1 more)
Tutorials/: 01_quickstart.ipynb  hierarchical_clustering.ipynb  test.ipynb
developer/: MACOS_OPENMP_FIX.md  MACOS_OPENMP_SYMBOL_FIX.md  NUMPY_COMPATIBILITY.md  PACKAGING_EXPLAINED.md  README.md  WHAT_FILES_TO_COMMIT.md  WHEEL_PACKAGING_GUIDE.md  WINDOWS_OPENMP_GUIDE.md  check_windows_openmp.py
docs/: README.md  WINDOWS_OPENMP_GUIDE.md
original_datasets_and_cleaning/: NLSY.ipynb  advanced_multidomain.ipynb  country_co2_emissions_local_quintiles.csv  country_co2_gdp_gapminder_data.ipynb  derived_sequence_features.csv  examples_output_display_for_documents.ipynb  missing_values_data_test.py  multidomain.ipynb  qiqi_large_data_hclut_test.py  qiqi_test.ipynb  qiqi_test.py  qiqi_test_OM.py  qiqi_test_hierarchical_clustering.py  runtime_of_dissimilarity_measures.ipynb  runtime_of_hierarchical.ipynb  stats_CQI.csv  test_both_sequences.ipynb  test_broad_sequences.ipynb  xinyi_test_dissmilarity_measures.py
requirements/: requirements-3.10.txt  requirements-3.11.txt  requirements-3.12.txt  requirements-3.9.txt
scripts/: README.md  clean_build.bat  clean_build.py  clean_build.sh  post_install.py
sequenzo/: __init__.py  define_multidomain_sequence_data.py  define_sequence_data.py  openmp_setup.py
tests/: README.md  __init__.py  test_basic.py  test_pam_and_kmedoids.py  test_quickstart_integration.py
tools/: README.md  check_windows_openmp.py  test_openmp.py
unit_test/: README_performance_test.md  run_performance_test.py  test_environment.py  test_get_distance_matrix_performance.py  test_get_distance_matrix_simple.py
(+337 files in other folders)
